# tcr-pmhc-interface-analysis

./: .buildinfo  .gitignore  .gitmodules  LICENSE  Makefile  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
docs/: conf.py  document_clis.py  document_notebooks.py  index.rst
notebooks/: Align TCR-pMHC.ipynb  Alignment Investigation.ipynb  Ascertaining_the_generalisability_of_the_structure_data.ipynb  Centre of mass analysis.ipynb  Centre_of_mass_analysis.ipynb  Compare_d_scores.ipynb  Comparing CDR phi-psi clusters between apo and holo states.ipynb  Comparing_of_apo_and_holo_CDR_loop_clustering.ipynb  Comparison of apo and holo CDR loops.ipynb  Comparison of apo and holo TCRs and MHC class I TCRModel2 structures refined.ipynb  Comparison of apo and holo TCRs and MHC class I TCRModel2 structures refined_extra alignment.ipynb  Comparison of apo and holo TCRs and MHC class I TCRModel2 structures.ipynb  Comparison of apo and holo TCRs and MHC class I structures.ipynb  Comparison of apo and holo TCRs and MHC class I structures_refined.ipynb  Comparison of apo and holo loop conformations.ipynb  Comparison_of_apo_and_holo_CDR_loops.ipynb  Correlating TCR and pMHC movement between apo and holo states.ipynb  Correlating conformational changes to affinity.ipynb  Correlating_conformational_changes_to_affinity.ipynb  Extract sequences of apo-holo structures.ipynb  Find overlap between TCR TCR-pMHC and MHC structures.ipynb  HLA Alleles in the dataset.ipynb  Identify TCR contact residues on MHC Class I molecules.ipynb  Identify contact residues on MHC Class I molecules.ipynb  Phi psi analysis.ipynb  (+20 more)
(+253 files in other folders)
