[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr_pmhc_structure_tools"
version = "0.0.0"
authors = [
    { name="Benjamin McMaster", email="benjamin.mcmaster@rdm.ox.ac.uk"}
]
requires-python = ">=3.10"
dependencies = [
    "dtaidistance",
    "python-pdb",
    "pandas",
    "requests",
]

[project.optional-dependencies]
develop = [
    "flake8",
    "isort",
    "pytest",
    "prysk[pytest-plugin]",
]

[tool.isort]
line_length = 120