[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr_pmhc_interface_analysis"
version = "0.0.0"
authors = [
    { name="Benjamin McMaster", email="benjamin.mcmaster@rdm.ox.ac.uk"}
]
requires-python = ">=3.10"
dependencies = [
    "dtaidistance",
    "hdbscan",
    "python-pdb",
    "pandas",
    "requests",
]

[project.optional-dependencies]
develop = [
    "flake8",
    "isort",
    "myst-parser",
    "nbsphinx",
    "pytest",
    "prysk[pytest-plugin]",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.isort]
line_length = 120